# pace-buddy

./: .dockerignore  .env.example  .gitignore  AGENTS.md  COMPLIANCE.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  TODO-CODEX.md  TODO.md  commands.txt  fly.toml  task.md
.github/workflows/: ci.yml
backend/: .gitignore  Cargo.toml  openrouter_key
backend/auth/: Cargo.toml
backend/auth/src/: jwt.rs  lib.rs  webauthn_service.rs
backend/cli/: Cargo.toml
backend/cli/src/: main.rs
backend/coach-memory/: Cargo.toml
backend/coach-memory/src/: classifier.rs  coach.rs  context.rs  lib.rs  normalizer.rs  store.rs  updater.rs
backend/coach-tool-macros/: Cargo.toml
backend/coach-tool-macros/src/: lib.rs
backend/data/intervals/: 12x400m.json  3x2k@04:00.json  4x2k@04:15.json
backend/domain/: Cargo.toml
backend/domain/src/: activity.rs  ai_chat.rs  coach.rs  error.rs  invite_code.rs  lap.rs  lib.rs  model_cost.rs  prescription.rs  profile.rs  quota.rs  stats.rs  strava_token.rs  stream.rs  training.rs  training_insight.rs  training_session.rs  user.rs
backend/intervals/: Cargo.toml
backend/intervals/src/: error.rs  fixtures.rs  hydrate.rs  intensity.rs  lib.rs  preprocess.rs  reps.rs  segment.rs  stats.rs  tests.rs  types.rs
backend/llm/: Cargo.toml
backend/llm/src/: lib.rs  open_router.rs  sequence.rs
backend/llm/tests/: openrouter_live.rs
backend/storage/: Cargo.toml
backend/storage/src/: lib.rs  sqlite.rs  traits.rs
backend/storage/src/migrations/: 001_initial.sql
backend/storage/tests/: running_coach_message.rs  training_session.rs
backend/strava-client/: Cargo.toml
backend/strava-client/src/: client.rs  conversions.rs  lib.rs  types.rs
backend/strava-client/tests/: parse_laps.rs  parse_streams.rs
backend/strava-client/tests/fixtures/: strava_streams_sample.json
doc/: ai-coach-data-inputs.md  coach-suggested-sessions-plan.md  interval-model.md
frontend/: README.md  index.html  package-lock.json  package.json  running.tool-key.pem  running.tool.pem  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: activities.ts  admin.ts  auth.ts  chats.ts  client.ts  coach.ts  models.ts  strava.ts  training-sessions.ts  trainings.ts
frontend/src/components/: ActivityMap.tsx  ActivityStats.tsx  AdminGuard.tsx  AuthGuard.tsx  ChatSettingsModal.tsx  CoachSettingsModal.tsx  CollapsibleContext.tsx  ContextPanel.tsx  IntervalRecap.tsx  MASChart.tsx  ModelPickerModal.tsx  Navbar.tsx  PrescriptionDisplay.tsx  SessionCard.tsx  (+3 more)
(+33 files in other folders)
