[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
domain = { path = "../domain" }
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
webauthn-rs = "0.5"
webauthn-rs-proto = "0.5"
